# SI-Investigations

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
.Secret/: Omar_Phone  chief1.txt  chief2.txt  chief3.txt  chief4.txt  chief5.txt  people.txt  start.sh
.Secret/Andre's_House/: place
.Secret/Andre_House/: corpse.txt
.Secret/Andre_House/Laptop/: description.txt  login
.Secret/Arrest/: CMakeLists.txt  Makefile  arrest  cmake_install.cmake
.Secret/Commands/: CMakeLists.txt  Makefile  cmake_install.cmake  commands  commands.cpp
.Secret/Database/: Makefile  cmake_install.cmake  database.cpp
.Secret/Investigate/: CMakeLists.txt  Investigate  Makefile  cmake_install.cmake  game.cpp  investigate.cpp
.Secret/Login/: CMakeLists.txt  Makefile  cmake_install.cmake  login  login.cpp
.Secret/Notes/: CMakeLists.txt  Makefile  cmake_install.cmake  game.cpp  game.h  notes  notes.cpp
.Secret/Notes_/: badge
.Secret/Silicon_Valley/AWS_Alley/Computer/: description.txt
.Secret/Talkto/: CMakeLists.txt  Makefile  cmake_install.cmake  game.cpp  game.h  talkto  talkto.cpp
.Secret/machine_learning/: Makefile
.Secret/src/commands/: commands.cpp  notes.cpp
Commands/: arrest  commands  investigate  notes  talk  talkto
Documents/: people.txt
Mystery/Chapter_1/SIPD/Computer/: police_report.txt
Mystery/Chapter_1/SIPD/Your_PC/: description.txt
Mystery/Chapter_1/Streets/: description.txt
Places/Streets/Andre's House/: place
src/: database.cpp
src/commands/: arrest.cpp  game.cpp  investigate.cpp  talk.cpp
(+1 files in other folders)
