cmake_minimum_required (VERSION 2.6)
project(SI-Investigations)

add_subdirectory(${PROJECT_SOURCE_DIR}/.Secret/Arrest)
add_subdirectory(${PROJECT_SOURCE_DIR}/.Secret/Database)
add_subdirectory(${PROJECT_SOURCE_DIR}/.Secret/Talkto)
add_subdirectory(${PROJECT_SOURCE_DIR}/.Secret/Notes)
add_subdirectory(${PROJECT_SOURCE_DIR}/.Secret/Investigate)
add_subdirectory(${PROJECT_SOURCE_DIR}/.Secret/Commands)
add_subdirectory(${PROJECT_SOURCE_DIR}/.Secret/Login)